docker 환경에서 실행하기 위하여 directory 이동

--- a/elevator/Dockerfile
+++ b/elevator/Dockerfile
@@ -1,11 +1,14 @@
 FROM golang:1.10
 MAINTAINER "jesse.ha" <jesse.ha@kakaocorp.com>
 
-COPY . /go/src/2019-blind-2nd-elevator/elevator
+COPY . /go/src/2019-blind-2nd-elevator/elevator 
 WORKDIR /go/src/2019-blind-2nd-elevator/elevator/cmd/elevator
 
 RUN go get ./
 RUN go build
+
+RUN mv /go/src/2019-blind-2nd-elevator/elevator/dataset /go/src/2019-blind-2nd-elevator/
+RUN mv /go/src/2019-blind-2nd-elevator/elevator/logs /go/src/2019-blind-2nd-elevator/
 
 EXPOSE 8000
 CMD ./elevator
